--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,7 @@
     <script src="js/controllers/deliveryman/servico.js"></script>
     <script src="js/controllers/deliveryman/checkoutDetailVeiculo.js"></script>
     <script src="js/controllers/deliveryman/signature.js"></script>
+    <script src="js/controllers/deliveryman/password.js"></script>
     <!--services-->
     <script src="js/services/product.js"></script>
     <script src="js/services/clientOrder.js"></script>
